[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hud/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=6]
action = "BombButton"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 110.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -163.5
margin_bottom = 13.5
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!

"
align = 1
autowrap = true

[node name="ChoseLevel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -90.5
margin_right = 236.0
margin_bottom = -35.5
custom_fonts/font = SubResource( 1 )
text = "choose the difficulty:"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = 181.0
margin_right = 103.5
margin_bottom = 265.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "START"
icon_align = 1

[node name="BombButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -64.0
margin_right = 58.5
margin_bottom = -18.0
custom_fonts/font = SubResource( 5 )
shortcut = SubResource( 4 )
text = "BOMB!"
icon_align = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ButtonEasy" type="Button" parent="."]
margin_left = 30.0
margin_top = 360.0
margin_right = 138.0
margin_bottom = 413.0
rect_pivot_offset = Vector2( -856, -176 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Easy"

[node name="ButtonNormal" type="Button" parent="."]
margin_left = 163.0
margin_top = 359.0
margin_right = 312.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Normal"

[node name="ButtonHard" type="Button" parent="."]
margin_left = 338.0
margin_top = 359.0
margin_right = 443.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Hard"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BombButton" to="." method="_on_BombButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="ButtonEasy" to="." method="_on_ButtonEasy_pressed"]
[connection signal="pressed" from="ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="pressed" from="ButtonHard" to="." method="_on_ButtonHard_pressed"]
